added horizontal scrolling list and sample search feature

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,15 +17,13 @@
 --><!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
   <title>Housing Price Pilot</title>
-
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<style>*{margin:0;padding:0}body{font-family:Be Vietnam Pro,sans-serif}:root{--primary-color:#605DC8;--secondary-color:#8B89E6;--accent-color:#e8e7fa;--shadow-color:#E8E8E8}</style><link rel="stylesheet" href="styles.569818a94afbdfa3.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.569818a94afbdfa3.css"></noscript></head>
 <body>
 <app-root>
 </app-root>
-<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.6b2d94c377c5c2ee.js" type="module"></script>
+<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.9a1e6312b102a542.js" type="module"></script>
 
 </body></html>
