--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,29 +1,13 @@
-<!--
-
-=========================================================
-* Material Dashboard Angular - v2.8.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/material-dashboard-angular2
-* Copyright 2021 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/material-dashboard-angular2/blob/master/LICENSE.md)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
---><!DOCTYPE html><html><head>
+<!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Housing Price Pilot</title>
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <meta name="viewport" content="width=device-width">
-<style>*{margin:0;padding:0}body{font-family:Be Vietnam Pro,sans-serif}:root{--primary-color:#605DC8;--secondary-color:#8B89E6;--accent-color:#e8e7fa;--shadow-color:#E8E8E8}</style><link rel="stylesheet" href="styles.569818a94afbdfa3.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.569818a94afbdfa3.css"></noscript></head>
+<style>*{margin:0;padding:0}body{font-family:Be Vietnam Pro,sans-serif}:root{--primary-color:#605DC8;--secondary-color:#8B89E6;--accent-color:#e8e7fa;--shadow-color:#E8E8E8}</style><link rel="stylesheet" href="styles.2dd3ab3f214add21.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.2dd3ab3f214add21.css"></noscript></head>
 <body>
 <app-root>
 </app-root>
-<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.109036607b699ecc.js" type="module"></script>
+<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.ff3158dd3c187349.js" type="module"></script>
 
 </body></html>
