--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,17 +1,17 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Housing Price Pilot</title>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-  <meta name="viewport" content="width=device-width" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>adoore</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    html, body {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
-<body class="mat-typography">
-<app-root>
-</app-root>
+<body>
+<app-root></app-root>
 </body>
 </html>
