--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html><html><head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Housing Price Pilot</title>
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-  <meta name="viewport" content="width=device-width">
-<style>*{margin:0;padding:0}body{font-family:Be Vietnam Pro,sans-serif}:root{--primary-color:#605DC8;--secondary-color:#8B89E6;--accent-color:#e8e7fa;--shadow-color:#E8E8E8}</style><link rel="stylesheet" href="styles.2dd3ab3f214add21.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.2dd3ab3f214add21.css"></noscript></head>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>adoore</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    html, body {
+      scroll-behavior: smooth;
+    }
+  </style>
+<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";body{margin:0;font-family:Roboto,sans-serif;background-color:#f7f9fc;color:#333;overflow:hidden}</style><link rel="stylesheet" href="styles.f9dafd3c3d465680.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f9dafd3c3d465680.css"></noscript></head>
 <body>
-<app-root>
-</app-root>
-<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.ff3158dd3c187349.js" type="module"></script>
+<app-root></app-root>
+<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.78788828692c6334.js" type="module"></script>
 
 </body></html>
