--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,9 +8,9 @@
       scroll-behavior: smooth;
     }
   </style>
-<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";body{margin:0;font-family:Roboto,sans-serif;background-color:#f7f9fc;color:#333;overflow:hidden}</style><link rel="stylesheet" href="styles.58ed864de02eb389.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.58ed864de02eb389.css"></noscript></head>
+<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";@font-face{font-family:SurvivalInstinct;src:url(http://localhost:8080/fonts/SurvivalInstinx-1jnDj.ttf) format("truetype");font-weight:400;font-style:normal}body{margin:0;font-family:SurvivalInstinct,sans-serif;background-color:#f7f9fc;color:#333;overflow:hidden}</style><link rel="stylesheet" href="styles.181245147aea22a2.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.181245147aea22a2.css"></noscript></head>
 <body>
 <app-root></app-root>
-<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.9cd851d4b6766f10.js" type="module"></script>
+<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.bb016cc9ed95e887.js" type="module"></script>
 
 </body></html>
