--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,15 +2,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>adoore</title>
-  <link rel="stylesheet" href="styles.css">
   <style>
     html, body {
       scroll-behavior: smooth;
     }
   </style>
-<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";@font-face{font-family:SurvivalInstinct;src:url(http://localhost:8080/fonts/SurvivalInstinx-1jnDj.ttf) format("truetype");font-weight:400;font-style:normal}body{margin:0;font-family:SurvivalInstinct,sans-serif;background-color:#f7f9fc;color:#333;overflow:hidden}</style><link rel="stylesheet" href="styles.181245147aea22a2.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.181245147aea22a2.css"></noscript></head>
+<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";@font-face{font-family:SurvivalInstinct;src:url(SurvivalInstinx-1jnDj.7d9ca78dccff888f.ttf) format("truetype");font-weight:400;font-style:normal}body{margin:0;font-family:SurvivalInstinct,sans-serif;background-color:#f7f9fc;color:#333;overflow:hidden}</style><link rel="stylesheet" href="styles.5e171ce45bcb6ec0.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5e171ce45bcb6ec0.css"></noscript></head>
 <body>
 <app-root></app-root>
-<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.bb016cc9ed95e887.js" type="module"></script>
+<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.785875da92b2a94d.js" type="module"></script>
 
 </body></html>
