finished styling improvements

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,9 +7,9 @@
       scroll-behavior: smooth;
     }
   </style>
-<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";@font-face{font-family:SurvivalInstinct;src:url(SurvivalInstinx-1jnDj.7d9ca78dccff888f.ttf) format("truetype");font-weight:400;font-style:normal}body{margin:0;font-family:SurvivalInstinct,sans-serif;background-color:#f7f9fc;color:#333;overflow:hidden}</style><link rel="stylesheet" href="styles.5e171ce45bcb6ec0.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5e171ce45bcb6ec0.css"></noscript></head>
+<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";body{margin:0;font-family:"sans-serif";background-color:#f7f9fc;color:#333;overflow:hidden}</style><link rel="stylesheet" href="styles.9e00b3099f8354b6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.9e00b3099f8354b6.css"></noscript></head>
 <body>
 <app-root></app-root>
-<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.785875da92b2a94d.js" type="module"></script>
+<script src="runtime.aaedba49815d2ab0.js" type="module"></script><script src="polyfills.1a4a779d95e3f377.js" type="module"></script><script src="main.5fdc77409bcf1b54.js" type="module"></script>
 
 </body></html>
